tabs and stuff , emphasis on the stuff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 description = "A powerful, secure web browser with advanced tab management"
 requires-python = ">=3.8"
 dependencies = [
-    "PyQt6>=6.4.0",
-    "PyQt6-WebEngine>=6.4.0",
+    "PyQt6>=6.6.1",
+    "PyQt6-WebEngine>=6.6.1",
+    "PyQt6-Qt6>=6.6.1",
+    "PyQt6-WebEngine-Qt6>=6.6.1",
     "cryptography>=39.0.0",
     "psutil>=6.1.1",
+    "requests>=2.32.3",
 ]
 
 [build-system]
